# arb

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  README_CN.md  VISION.md
.cargo/: config.toml
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
arb/: Cargo.toml
arb-gui/: Cargo.toml  build.rs
arb-gui/src/: colorease.rs  commands.rs  customglyph.rs  download.rs  frontend.rs  glyphcache.rs  inputmap.rs  main.rs  quad.rs  renderstate.rs  resize_increment_calculator.rs  selection.rs  stats.rs  tabbar.rs  update.rs  utilsprites.rs
arb/src/: asciicast.rs  bench.rs  config_cmd.rs  doctor.rs  init.rs  main.rs  paths.rs  reset.rs  update.rs
arb/src/cli/: activate_pane.rs  activate_pane_direction.rs  activate_tab.rs  adjust_pane_size.rs  get_pane_direction.rs  get_text.rs  kill_pane.rs  move_pane_to_new_tab.rs  rename_workspace.rs  send_text.rs  set_tab_title.rs  set_window_title.rs  spawn_command.rs  split_pane.rs  zoom_pane.rs
arb/tests/: config_template.rs  init_integration.rs  shell_scripts.rs  update_cleanup.rs  version_comparison.rs
assets/shell-completion/: _arb  _kaku  fish
assets/shell-integration/: check_config_version.sh  first_run.sh  install_delta.sh  setup_zsh.sh
config/: Cargo.toml
config/derive/: Cargo.toml
config/src/: background.rs  color.rs  config.rs  font.rs  keyassignment.rs  lib.rs  lua.rs  scheme_data.rs  terminal.rs  version.rs  wsl.rs
crates/arb-version/: Cargo.toml
crates/bidi/: Cargo.toml  README.md
crates/color-types/: Cargo.toml
crates/filedescriptor/: Cargo.toml
crates/pty/: Cargo.toml
crates/tabout/: Cargo.toml
crates/vtparse/: Cargo.toml
crates/wezterm-blob-leases/: Cargo.toml
crates/wezterm-cell/: Cargo.toml
crates/wezterm-toast-notification/: Cargo.toml
crates/wezterm-toast-notification/src/: lib.rs  macos.rs
docs/: best-terminal-for-claude-code.html  index.html
kaku/: Cargo.toml
scripts/: bench_startup.sh  build.sh  download_vendor.sh  notarize.sh  reset_first_run.sh  upload_release_assets.sh
term/: Cargo.toml
termwiz/: Cargo.toml
window/: Cargo.toml
(+175 files in other folders)
