[package]
name = "wezterm-toast-notification"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
wezterm-open-url.workspace = true

[target.'cfg(target_os="macos")'.dependencies]
block2.workspace = true
objc2.workspace = true
objc2-user-notifications.workspace = true
objc2-foundation.workspace = true
uuid = { workspace=true, features=["v4", "fast-rng"] }
